--- a/ToDo.txt
+++ b/ToDo.txt
@@ -30,17 +30,13 @@ Considerações da C2DI:
 
 Considerações 27/11
 
-- Primeiro grafico de financeiro: previsto e realizado total um grafico de linha onde X vai ser grana e Y vai ser tempo - só um valor total
-- Primeiro grafico de % de construção: previsto e realizado total um grafico de linha onde X vai ser grana e Y vai ser tempo
 
-andamento da obra: serviços preliminares/movimentação de terra - fundação - estrutura - eletrica - hidraulica - ar condicionado - alvenaria - pintura - gesso - acabamentos finais
+-andamento da obra: serviços preliminares/movimentação de terra - fundação - estrutura - eletrica - hidraulica - ar condicionado - alvenaria - pintura - gesso - acabamentos finais
 
 -colocar imagens ilustrativas em Entenda um pouco mais sobre o seu projeto: (imagens de fundação, estrutura etc)
 -pensar em validações para que o gerente de projetos não altere custos importantes da obra (gerente de obra não pode alterar ficha)
 -mostrar cotação das moedas principais, selic, e outras coisas
 -ver chances de graficos em fullScreen
-
 - pensar na role morador
 
-- PARA AMANHÃ: TROCAR GRAFICOS DAS INFOSGERAIS
 - PARA SEXTA: MEMPHIS DEPLOY
